--- a/styles/components/_menu-secondary.scss
+++ b/styles/components/_menu-secondary.scss
@@ -5,9 +5,18 @@
     display: flex;
     width: 100%;
     height: 100%;
-    justify-content: center;
     align-items: center;
     padding-top: 0;
+
+    &:before {
+      content: '';
+      margin-top: auto;
+    }
+
+    &:after {
+      content: '';
+      margin-bottom: auto;
+    }
   }
 
   .menu-schools__col {
